feat(openapi): Regenerated openapi
