# currencies/src/app/services/api/models.ts
@@ -1,3 +1,4 @@
-export { SuscribeCurrencySchema } from './models/suscribe-currency-schema';
 export { ErrorsSchema } from './models/errors-schema';
-export { ProfileSchema } from './models/profile-schema';
+export { UserSchema } from './models/user-schema';
+export { SuscribeCurrencySchema } from './models/suscribe-currency-schema';
+export { HistorySchema } from './models/history-schema';
