# currencies/src/app/services/api/models/history-schema.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export type HistorySchema = Array<{
+'currency'?: string;
+'currencyLog'?: Array<any>;
+}>;
