# currencies/src/app/services/api/models/profile-schema.ts
@@ -1,6 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export interface ProfileSchema {
-  currency?: string;
-  currencyLog?: Array<any>;
-}
