# currencies/src/app/services/api/models/user-schema.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UserSchema {
+  followedCurrencies?: Array<any>;
+  name?: string;
+  surname?: string;
+}
